docs/book/samples/appa/blank_in_body_check.out
error[formatting]: blank lines may not appear inside a body
  --> blank_in_body_check.kso:4:1
   4 |   print "{x}"
       ^
